# GA_Practice

./: CMakeLists.txt  README.md
src/genalg/: main.cpp
src/genalg/core/: generation.cpp  generation.hpp  genetic.cpp  genetic.hpp
src/genalg/evolution/: interface.hpp
src/genalg/evolution/crossover/: crossover.cpp  crossover.hpp
src/genalg/evolution/evaluator/: evaluator.cpp  evaluator.hpp
src/genalg/evolution/mutation/: mutation.cpp  mutation.hpp
src/genalg/evolution/selection/: selection.cpp  selection.hpp
src/genalg/structures/: interface.hpp  polynomial.cpp  polynomial.hpp
src/genalg/test/: crossover_test.cpp  generation_test.cpp  mutation_test.cpp  polynomial_test.cpp  selection_test.cpp
src/genalg/util/: random.hpp
src/gui/: CMakeLists.txt  finishwindow.cpp  finishwindow.h  finishwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processwindow.cpp  processwindow.h  processwindow.ui
